# WebKit

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.android  Dockerfile.freebsd  Dockerfile.macos  Dockerfile.musl  Introduction.md  Makefile  ReadMe.md  android-release.sh  build-icu.ps1  build.ts  freebsd-release.sh  mac-release.bash  macos-cross-release.sh  musl-release.sh  release.sh  test-ipint-with-file.js  test-wasm-crash-loader.js  test-wasm-ipint-crash-jsc.js  test-wasm-ipint-crash.js  test-wasm-ipint-crash.wasm  test-wasm-ipint-crash.wat  vcpkg-configuration.json  windows-release-vcpkg.ps1  windows-release.ps1
.github/: CODEOWNERS
.github/workflows/: build-preview.yml  build-reusable.yml  build.yml
Configurations/: CommonBase.xcconfig  DeploymentTargets.xcconfig  Makefile  SDKAdditions.xcconfig  Sanitizers.xcconfig  Version.xcconfig  WebKitProjectPaths.xcconfig  WebKitTargetConditionals.xcconfig
JSTests/: complex.yaml  wasm.yaml
JSTests/complex/: intl-default-timezone-backward-link.js  intl-default-timezone-etc-gmt-offset.js  intl-default-timezone-etc-unknown.js  intl-default-timezone-region-alias.js  intl-default-timezone-three-letter-alias.js  intl-default-timezone-utc-alias.js
JSTests/microbenchmarks/: arithmetic-shift-and-mask.js  array-from-derived-object-func.js  array-from-object-func.js  array-is-array-cse.js  array-length-reset-double.js  array-prototype-lastIndexOf-contiguous-long.js  array-prototype-lastIndexOf-int32-long.js  bigint64-array-index-of-large.js  bigint64-array-index-of-medium.js  bigint64-array-index-of-small.js  bigint64-array-last-index-of-large.js  bigint64-array-last-index-of-medium.js  bigint64-array-last-index-of-small.js  biguint64-array-index-of-large.js  biguint64-array-index-of-medium.js  biguint64-array-index-of-small.js  biguint64-array-last-index-of-large.js  biguint64-array-last-index-of-medium.js  biguint64-array-last-index-of-small.js  define-properties-slow-path.js  float32-array-index-of-large.js  float32-array-index-of-medium.js  float32-array-index-of-small.js  float32-array-last-index-of-large.js  float32-array-last-index-of-medium.js  float32-array-last-index-of-small.js  float64-array-index-of-large.js  float64-array-index-of-medium.js  float64-array-index-of-small.js  float64-array-last-index-of-large.js  float64-array-last-index-of-medium.js  float64-array-last-index-of-small.js  for-of-array-map-mixed.js  for-of-array-set-mixed.js  for-of-map-entries-small.js  for-of-map-entries.js  for-of-set-values-small.js  for-of-set-values.js  generator-object-sinking.js  get-private-name.js  (+110 more)
JSTests/modules/: bare-resolution-failure.js  concurrent-imports.js  module-var-resolve-scope-osr-availability-in-async-finally.js  namespace-single-walk.js  sync-from-async.js  tla-cycle.js
JSTests/mozilla/: mozilla-tests.yaml
JSTests/slowMicrobenchmarks/: dense-set.js  function-constructor-with-huge-strings.js  map-constant-key.js
JSTests/stress/: PrintStream-truncation-for-extremely-long-strings.js  StringObject-define-length-getter-rope-string-oom.js  array-allocation-sink-double-hole-inline-materialization.js  array-allocation-sink-double-hole-osr-exit.js  array-allocation-sink-double-nan-not-hole.js  array-buffer-view-watchpoint-can-be-fired-in-really-add-in-dfg.js  array-is-array-clobberize.js  array-is-array-proxy-effects.js  array-length-store-ic-double-noncow.js  array-length-store-ic-double-then-int32.js  atob-btoa-oom-check.js  (+218 more)
LayoutTests/: TestExpectations  tests-options.json
Source/: CMakeLists.txt
Source/bmalloc/mimalloc/: CMakeLists.txt
Source/bmalloc/mimalloc/mimalloc/contrib/vcpkg/: portfile.cmake  vcpkg.json
Source/bmalloc/mimalloc/mimalloc/doc/: mimalloc-doc.h
Source/bmalloc/mimalloc/mimalloc/docs/: annotated.html  environment.html  group__analysis.html  group__cpp.html  group__extended.html  group__extended.js  group__options.html  group__posix.html  group__typed.html  group__zeroinit.html  index.html  mimalloc-doc_8h_source.html  navtreedata.js  navtreeindex0.js  overrides.html
Source/bmalloc/mimalloc/mimalloc/docs/search/: all_9.js  functions_0.js
Tools/: PlatformMac.cmake
WebDriverTests/: TestExpectations.json
macos-cross/: README.md  mig  xmac.mjs
metadata/: contributors.json
scripts/: mirror-gcc13-debs.sh
(+17806 files in other folders)
